--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@ title: 홈
 <div>
   <h2>안녕하세요.</h2>
 
-  실바의 블로그에 오신것을 환영합니다.
-  <br/><br/>
-  상단 메뉴를 눌러 원하는 포스팅을 찾아보세요
+  <p>실바의 블로그에 오신 것을 환영합니다.</p>
+  
+  <p>이 블로그는 <strong>Python/Django 백엔드 개발</strong>을 중심으로, 실무에서 마주한 문제들과 해결 과정을 기록합니다.</p>
+  
+  <p><strong>기술 블로그</strong>에서는 PostgreSQL 최적화, AWS 인프라 운영, DevOps 실무 경험, 그리고 AI 도구(Cursor) 활용법 등을 다룹니다. 특히 데이터베이스 성능 튜닝과 대용량 트래픽 대응 경험이 많습니다.</p>
+  
+  <p><strong>코드 스니펫</strong> 섹션에는 Django, FastAPI, JavaScript 등 실무에서 바로 사용할 수 있는 코드 모음이 있습니다.</p>
+  
+  <p>또한 <strong>투자</strong>와 <strong>여행</strong> 관련 경험도 함께 공유합니다.</p>
+  
+  <p>상단 메뉴를 통해 관심 있는 주제를 찾아보세요. 실무 중심의 내용으로 도움이 되길 바랍니다.</p>
 </div>
